# triangle-sdl3-opengl-mingw-c

./: .gitignore  CMakeLists.txt  README.md  build-exe.bat  config-exe.bat  run-exe.bat
src/: main.c
